--- a/project.ipynb
+++ b/project.ipynb
@@ -449,6 +449,76 @@
     "plt.title('t-SNE of Node Embeddings')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fda8ac43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Key Findings ===\n",
+      "1. Node Classification:\n",
+      "   - Test Accuracy: 0.7972\n",
+      "   - Per-class precision, recall, and F1-score:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9244    0.7483    0.8271       147\n",
+      "           1     0.7930    0.7477    0.7697       333\n",
+      "           2     0.7387    0.8067    0.7712      1076\n",
+      "           3     0.8641    0.8095    0.8359       966\n",
+      "           4     0.8630    0.8753    0.8691      1339\n",
+      "           5     0.7729    0.7154    0.7430       390\n",
+      "           6     0.8598    0.6845    0.7622       206\n",
+      "           7     0.6842    0.6019    0.6404       432\n",
+      "           8     0.6944    0.6098    0.6494       246\n",
+      "           9     0.7602    0.9129    0.8296       712\n",
+      "\n",
+      "    accuracy                         0.7972      5847\n",
+      "   macro avg     0.7955    0.7512    0.7698      5847\n",
+      "weighted avg     0.7989    0.7972    0.7958      5847\n",
+      "\n",
+      "\n",
+      "2. Community Detection:\n",
+      "   - t-SNE visualization shows clusters of related articles.\n",
+      "   - Clusters often correspond to Wikipedia categories.\n",
+      "\n",
+      "3. Centrality and Influence:\n",
+      "   - Top 5 most connected articles (node indices): [7983  823 6797 2045 8262]\n",
+      "\n",
+      "4. Semantic Relationships:\n",
+      "   - Articles with similar content and/or link patterns are close in embedding space, even if not directly linked.\n",
+      "\n",
+      "5. Visualization:\n",
+      "   - See the t-SNE plot above for a visual summary of article communities.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"=== Key Findings ===\")\n",
+    "print(\"1. Node Classification:\")\n",
+    "print(f\"   - Test Accuracy: {test_acc:.4f}\")\n",
+    "print(\"   - Per-class precision, recall, and F1-score:\")\n",
+    "print(classification_report(y_true, y_pred, digits=4))\n",
+    "\n",
+    "print(\"\\n2. Community Detection:\")\n",
+    "print(\"   - t-SNE visualization shows clusters of related articles.\")\n",
+    "print(\"   - Clusters often correspond to Wikipedia categories.\")\n",
+    "\n",
+    "print(\"\\n3. Centrality and Influence:\")\n",
+    "degrees = data.edge_index[0].bincount()\n",
+    "top_nodes = degrees.topk(5).indices.cpu().numpy()\n",
+    "print(f\"   - Top 5 most connected articles (node indices): {top_nodes}\")\n",
+    "\n",
+    "print(\"\\n4. Semantic Relationships:\")\n",
+    "print(\"   - Articles with similar content and/or link patterns are close in embedding space, even if not directly linked.\")\n",
+    "\n",
+    "print(\"\\n5. Visualization:\")\n",
+    "print(\"   - See the t-SNE plot above for a visual summary of article communities.\")\n"
+   ]
   }
  ],
  "metadata": {
